<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/row_cardview_classifica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rootClassifica">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="#08315c"
            android:gravity="center_horizontal"
            android:id="@+id/nome_gruppo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/title_sq"
                android:textSize="14sp"
                android:textColor="#000000"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_g"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_pti"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_gf"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_gs"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_dr"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/cl_img_sq_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:padding="3dp">
            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/cl_nome_sq_1"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_g_1"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_pti_1"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gf_1"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gs_1"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_df_1"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/cl_img_sq_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:padding="3dp">
            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/cl_nome_sq_2"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_g_2"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_pti_2"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gf_2"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gs_2"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_df_2"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/cl_img_sq_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:padding="3dp">
            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/cl_nome_sq_3"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_g_3"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_pti_3"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gf_3"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gs_3"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_df_3"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/cl_img_sq_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:padding="3dp">
            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/cl_nome_sq_4"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_g_4"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_pti_4"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gf_4"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_gs_4"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cl_df_4"
                android:textSize="14sp"
                android:textColor="#767676"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="3dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>